<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbasic"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvHeroTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/players_title"
            android:textAppearance="@style/TextAppearance.Piratas.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvCodigoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/players_code_label"
            android:textAppearance="@style/TextAppearance.Piratas.Section"
            app:layout_constraintTop_toBottomOf="@id/tvHeroTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnPartidaCode"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btnclaro"
            app:backgroundTint="@null"
            android:fontFamily="@font/pirata"
            android:gravity="center"
            android:text="@string/players_sample_code"
            android:textColor="@color/anaranjadoLight"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tvCodigoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345" />

        <TextView
            android:id="@+id/tvPlayersLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/players_label"
            android:textAppearance="@style/TextAppearance.Piratas.Section"
            app:layout_constraintTop_toBottomOf="@id/btnPartidaCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_room"
            tools:itemCount="3"
            app:layout_constraintTop_toBottomOf="@id/tvPlayersLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_icon_circle"
            android:contentDescription="@string/cd_cancel"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close"
            android:layout_marginBottom="24dp"
            app:tint="@color/blanco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <Button
            android:id="@+id/btnEmpezar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnclaro"
            app:backgroundTint="@null"
            android:fontFamily="@font/pirata"
            android:textAlignment="center"
            android:text="@string/players_start_button"
            android:textColor="@color/blanco"
            android:textSize="25sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>