<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fontFamily="@font/pirata"
    tools:context=".InicioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:paddingEnd="30dp"
        >

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/signUp"
            android:textColor="@color/anaranjado"
            android:textSize="50sp" />


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata"
            android:layout_gravity="start"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/sombra_naranja"
            android:textSize="50sp" />

        <LinearLayout
        android:id="@+id/llLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/etUsuari"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:hint="@string/correo"
            android:layout_gravity="start"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/anaranjado"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/usuari"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/anaranjado"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etContrasenya"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/anaranjado"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etContrasenyaRep"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/repContrasenya"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:textColorHint="@color/anaranjado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/anaranjado"
            android:textSize="16sp" />



    </LinearLayout>


    <Button
        android:id="@+id/btnRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/pirata"
        android:background="@drawable/btnregistro"
        app:layout_constraintTop_toBottomOf="@+id/llLoginContainer"
        app:backgroundTint="@null"
        android:text="@string/btn_registrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:letterSpacing="0.1"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>